autoscaling/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
spec:
  ingressClassName: nginx
  rules:
  - host: "myapp.example.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: myapp
              port:
                number: 80
